* Optimized printSolution method to use a StringBuilder instead of printf since printf takes a lot of memory